# Zappy

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  asset-manifest.json  auto.sh  index.html
.github/: commit-keywords.txt
.github/scripts/: check_commit  check_main_branch  check_program_compilation  display_coding_style
.github/workflows/: action.yml  check_commit  check_program_compilation
ai/: Makefile  zappy_ai
ai-progressive/: artificial_intelligence.py  exceptions.py  parser.py
ai/faster/: artificial_intelligence.py  color.py  connection.py
ai/include/: Algo.hpp  CommandsManager.hpp  CommandsQueue.hpp  Engine.hpp  Parser.hpp  Player.hpp  ZappyTypes.hpp
ai/progressive/: artificial_intelligence.py  connection.py  parser.py  zappy_ai  zappy_ai.py
ai/src/: Algo.cpp  CommandsManager.cpp  CommandsQueue.cpp  Engine.cpp  Main.cpp  Parser.cpp  Player.cpp
ai/useless/include/: Algo.hpp  CommandsQueue.hpp  Engine.hpp  Parser.hpp  Player.hpp  ZappyTypes.hpp
ai/useless/src/: Algo.cpp  CommandsQueue.cpp  Engine.cpp  Main.cpp  Parser.cpp  Player.cpp
bonus/: time_checker.cpp
bonus/ai/: algorithm.py  artificial_intelligence.py  client.py  connection.py  parser.py  zappy_ai.py
docs/: COMMITS_POLICY.md  COMMIT_POLICIES.md  PROTOCOLS_DOCUMENTATION.md
docs/html/: Algo_8cpp.html  Algo_8hpp.html  Algo_8hpp.js  Algo_8hpp_source.html  AssetsManager_8cpp.html  AssetsManager_8hpp.html  AssetsManager_8hpp.js  AssetsManager_8hpp_source.html  Button_8cpp.html  Button_8hpp.html  Button_8hpp.js  Button_8hpp_source.html  Chatbox_8cpp.html  Chatbox_8hpp.html  Chatbox_8hpp.js  Chatbox_8hpp_source.html  CommandsQueue_8cpp.html  CommandsQueue_8hpp.html  CommandsQueue_8hpp.js  CommandsQueue_8hpp_source.html  Commands_8cpp.html  Commands_8hpp.html  Commands_8hpp.js  Commands_8hpp_source.html  Core_8cpp.html  Core_8hpp.html  Core_8hpp.js  Core_8hpp_source.html  EndInfo_8cpp.html  EndInfo_8hpp.html  EndInfo_8hpp.js  EndInfo_8hpp_source.html  End_8cpp.html  Engine_8cpp.html  Engine_8hpp.html  Engine_8hpp_source.html  Exceptions_8hpp.html  Exceptions_8hpp.js  Exceptions_8hpp_source.html  GameInfo_8cpp.html  (+2099 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+125 more)
docs/tests/: test.Algo.cpp.53392f87015e6c33644eaa164a249c6d.html  test.Algo.cpp.bf84ba5b33b2a33c68fbfd56eeac16db.html  test.Algo.hpp.5ee79c45181620a5b09ed6e17476d0a4.html  test.Algo.hpp.af93074eb5f5b60f6720c0fdf28a62a6.html  test.CommandsQueue.cpp.4f1df22e01868a6b81230977f484141a.html  test.CommandsQueue.cpp.721c50be8d27035d61ffcbdb21d16a95.html  test.CommandsQueue.hpp.21bcf4f2decd0cdaf7a37ce63288f150.html  test.Engine.cpp.061ef03a5230cfdc6394264725b6a221.html  test.Engine.cpp.56f5f0ae54eaf89f61fef858984fcbb9.html  test.Exceptions.hpp.ed2ad35126915a120611d54afc3e8be1.html  test.Logs.hpp.334661944d95f848b25bc1482abef6a3.html  test.Parser.cpp.2f5b9f8c8c115e5dfff6a993630141f5.html  test.Parser.cpp.eb7e686dc2f5da89a963202af2ea2c04.html  test.Parser.hpp.fda2f0d2708eca457692b4d73384136d.html  test.Player.cpp.800332f11a543aab929c7e20d0af21ea.html  test.Player.cpp.e346b74d2244d1a975e19c3ed3731860.html  test.Player.hpp.38223e1c2d56752c496335c67d782c09.html  test.Player.hpp.e817e73e011841f92f114d16c7de049c.html  test.ZappyTypes.hpp.213f66e31d8de942975d90882b066d95.html  test.ZappyTypes.hpp.e005ba06409bf6d3dc0d63e7d25e235f.html  test.add_new_client.c.f1d99ee31b91740206d2d0f214aedc53.html  test.all.c.cd472bcc202db4830c89d531a269c3fd.html  test.analyse_poll.c.4aa1476ad1c5ac89ad030cac70343dd1.html  test.analyze_poll.c.e534d91fcf33278aac7a323bb4d1ee22.html  test.authenticate_client.c.f0ea3fb3785ff0e6a7d8ef5a0b3fef28.html  test.authors.c.c4d102ebf38ce9fdf7b7ec504c84fd83.html  test.auto_end.c.ae6d5010c85345d387a2c1caa69934ad.html  test.bct.c.73c51e7daeeba8dfca42701b78fe9592.html  test.bct.c.ab32e1d79464723bdbe671b92e569295.html  test.broadcast.c.20c775654cc061da63cef9b46de2db05.html  test.broadcast.c.e4d4de4cf1b120c5e27969d4b95cd116.html  test.clear.c.bad765a6c0dba4e853cddb2dcdda2627.html  test.client.c.f312228b6d538fa6e08c1fa2bf17e8a2.html  test.clients.c.50a825d01744a157ebfda422de3ff4b3.html  test.clients.c.707a995de3ec541f801caccb2daa64f4.html  test.clients.c.b8cab6b252ad5631128cb668dc7fc49c.html  test.connect_nbr.c.9492b90cb4e739dbca8571a9585a4ea8.html  test.data_structures.h.b5fe85dba7ec3896606d877f899f095d.html  test.debug_mode.c.60bd0d04b0abf5de1a62c6083e15e205.html  test.debug_mode.c.8357eb36d90d7142d321dee0283d10bd.html  (+95 more)
gui/: Makefile  README.md
gui/assets/: apple.glb  box.glb  buff_steve.glb  centaur_steve.glb  construction_steve.glb  corrupted_steve.glb  egg.glb  gold.glb  mendiane.glb  player2.glb  player7.glb  poisson_steve.glb  redstone.glb  squid_steve.glb  steve.glb  thystame.glb  wheelchair_steve.glb
gui/assets/golden_apple/: apple.gltf  license.txt
gui/assets/island/: island.gltf  (+1 more)
gui/src/: Main.cpp
resources/: README.md
ressources/: README.md
server/: Makefile.old
server/include/: commands.h  data_structures.h  game.h  network.h  parsing.h  server.h  server_data_structures.h  server_macros.h
server/src/: Main.cpp  main.c  server.c
static/js/: 453.c319271a.chunk.js  453.c319271a.chunk.js.map  main.356981c1.js  main.356981c1.js.map
tests/: tests.c  tests.h
tests/ai/: test_ai.cpp
tests/server/: test_server.c  test_server_ai.c  test_server_gui.c  test_server_server.c
utils/include/: Lib.hpp  Logs.hpp
utils/src/: Lib.cpp  Logs.cpp
website/: .env  .gitignore  README.md  package-lock.json  package.json
website/public/: index.html
website/src/: App.js
zappy-website/: .env
zappy-website/public/: manifest.json
zappy-website/src/: App.js
(+356 files in other folders)
